# agentmesh

./: .env.example  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
examples/customer_support/: workflow.yaml
examples/research_team/: run.py  workflow.yaml
examples/trading_research/: run.py  workflow.yaml
src/agentmesh/: __init__.py  cli.py  config.py
src/agentmesh/core/: __init__.py  agent.py  message.py  state.py  task.py  usage.py  validators.py
src/agentmesh/orchestration/: __init__.py  graph.py  orchestrator.py  strategies.py
src/agentmesh/providers/: __init__.py  anthropic_provider.py  base.py  mock_provider.py  nemotron_provider.py  openai_provider.py
src/agentmesh/tools/: __init__.py  base.py  builtin.py  registry.py
tests/: test_agent.py  test_cli.py  test_config.py  test_examples.py  test_graph.py  test_message.py  test_orchestrator.py  test_retry.py  test_tools.py  test_usage.py
